the history of the 3.2 series (2018-05 - 2022-08).

# 3.3.3 (unreleased)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Anke Boersma

## Core ##
 - Core libraries *libcalamares* and *libcalamaresui* now build with
   hidden visibility by default, as a step towards ABI stability.

## Modules ##
 - *plasmalnf* module ported to Plasma 6


# 3.3.2 (2024-02-19)

This release contains contributions from (alphabetically by first name):
 - Aaron Rainbolt
 - Adriaan de Groot
 - Anke Boersma
 - Evan James
 - Jonathan Riddell
 - Lukas Märdian
 - Tj

## Core ##
 - Slideshow support code (QML) now ported to Qt6 and made available
   as two separate directories of support-code. (thanks Jon)
 - Compatibility with Qt versions prior to 5.15.5 has been removed.

## Modules ##
 - *fstab* bug fixed where BTRFS messes up the partition layout. (thanks Tj)
 - *networkcfg* on NetPlan-enabled systems, configure NetworkManager
   with the live-system's NetPlan settings. (thanks Lukas)
 - *partition* module can now also define unencrypted partitions
   when encryption is used. (thanks Aaron)


# 3.3.1 (2024-01-15)

This release sets `BUILD_APPDATA` and `BUILD_APSTREAM` to default to **OFF**,
where previously they defaulted to **ON**. When enabled, the dependencies for
both features are required -- previously they would silently switch off if
the dependencies were not found. Distributions are strongly advised to check
their package-building instructions.

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Aleksey Samoilov
 - Emir Sari
 - Simon Quigley

## Core ##
 - There has been internal code re-organization (e.g. not using functions
   named `tr()`) to help translation tools.
 - Strings everywhere have been given more context. (thanks Emir)
 - In CMake, "view" is no longer accepted as an alias of the module
   type "viewmodule" in function `calamares_add_plugin()`.