@@ -18,6 +18,7 @@ This release contains contributions from (alphabetically by first name):
    hidden visibility by default, as a step towards ABI stability.
 
 ## Modules ##
+ - *interactiveterminal* can use konsole in Qt6 too
  - *plasmalnf* module ported to Plasma 6
 
 
